Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.2
-
C7 + 92_201102 Subcon + Split view SHA 51b601793189b1ea051fe71b0f851139f44ea167
-
b133f1b45638dd10bd5400393d83ca1bed1985c4
Description
Preconditions:
QML application includes many text input fields. Tested with 5 input fields (vertically centered on portrait mode).
Test steps:
1. Tap the text input field in the middle of the screen
--> split view is opened on portrait mode.
2. Switch the layout to landscape mode.
Expected result:
Focused text input field is visible on landscape mode.
Actual result:
Focused text input field is not visible on split view landcape mode.
Note: if the layout is again changed to portrait, focused text input field is not visible on portrait mode either. And the background application is visible at the upper part of split view screen area.
Attachments
Issue Links
- relates to
-
QTBUG-16572 Support partial input mode
-
- Closed
-