Ensure visibility of input widget in QML app when doing layout switch

When QML application changes orientation, it usually switches to a new
layout that lays out widgets differently (ie. in portrait, one vertical
column; in landscape, horizontal multi-column layout).

This easily breaks splitview translation logic, since it tries to ensure
the visibility of the input widget before the new layout has been
applied.

Additionally, the logic failed, when connected signal was fired, since
it assumed that the new translation would have translated the view above
from where it started from (i.e. window below the translated view would
have been exposed) and thus, it didn't do anything.

As a fix, when translation logic seems to indicate that the translation
would fail (and thus previously wouldn't do anything), reset the
existing translation and try again.

Task-number: QTBUG-16785
Reviewed-by: Miikka Heikkinen